Bower file improvements

--- a/bower.json
+++ b/bower.json
@@ -2,9 +2,18 @@
   "name": "codepen-embed",
   "description": "A Polymer element to allow embedding of Codepen pens",
   "main": "codepen-embed.html",
+  "keywords": [
+    "web-components",
+    "polymer",
+    "codepen"
+  ],
+  "authors": [
+    "John Clarke", "themagoo@hotmail.co.uk"
+  ],
   "dependencies": {
     "polymer": "Polymer/polymer#^1.4.0"
   },
+  "license": "MIT",
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.0.0",
